--- a/src/scss/components/usersList.scss
+++ b/src/scss/components/usersList.scss
@@ -1,5 +1,9 @@
 .user-list {
 	&__wrapper {
+		@media #{$breakpoint-xs-only} {
+			max-height: 65vh;
+			overflow-y: scroll;
+		}
 	}
 	&__header,
 	&__item {
@@ -72,11 +76,10 @@
 
 		overflow: hidden;
 		opacity: 0;
-		transform: translate(500%, 0%);
-		transition: transform 0s linear 0s;
+
+		height: 0;
 		display: flex;
 		align-items: center;
-		transform-style: preserve-3d;
 
 		&_contant {
 			position: relative;
@@ -89,7 +92,7 @@
 			margin: 0 auto;
 			overflow-y: visible;
 
-			width: calc(100% - 12em);
+			width: 100%;
 			max-width: 400px;
 			height: 100%;
 			max-height: 135px;
@@ -154,25 +157,16 @@
 
 .modal-show {
 	opacity: 1;
-	transform: translate(0%, 0%);
-	-webkit-transform: translate(0%, 0%);
 
 	.user-list__modal {
 		opacity: 1;
-		transform: translate(0%, 0%);
-		-webkit-transform: translate(0%, 0%);
+		height: 100%;
 	}
 
-	.user-list__modal_contant {
-		transform: translate(0%, 0%);
-		-webkit-transform: translate(0%, 0%);
-	}
 	.overlay {
 		width: 100%;
 		height: 100%;
 		opacity: 1;
-		transform: translate(0%, 0%);
-		-webkit-transform: translate(0%, 0%);
 	}
 }
 
